<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="jialing.tcp.SettingActivity">

    <TextView
        android:id="@+id/lab_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_setting"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/ed_server_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="http://123.192.50.241:1201/MwIMS/Service/Service.asmx?op=UploadFile"
        android:inputType="textUri|textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/cancel"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/confirm"
            android:textSize="40dp" />
    </LinearLayout>

</LinearLayout>