<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="jialing.tcp.ChooseActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="智能醫療廢棄物\n伺服器管理作業系統"
        android:textColor="@color/text"
        android:textSize="60sp" />

    <Button
        android:id="@+id/btn_location2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_location1"
        android:layout_alignLeft="@+id/btn_location1"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_rounde"
        android:gravity="center"
        android:text="@string/title_activity_sick_room"
        android:textColor="@android:color/background_light"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="295dp" />

    <Button
        android:id="@+id/btn_location1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_rounde"
        android:gravity="center"
        android:text="@string/title_activity_garbage"
        android:textColor="@android:color/background_light"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="132dp" />

    <Button
        android:id="@+id/btn_new_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_rounde"
        android:gravity="center"
        android:text="@string/title_activity_new_pic"
        android:textColor="@android:color/background_light"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="132dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting" />
    </LinearLayout>

</LinearLayout>
